<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingRight="@dimen/new_event_item_padding"
    tools:showIn="@layout/activity_new_event">

    <com.joanzapata.iconify.widget.IconTextView
        style="@style/AppTheme.NewEvent.Icon"
        android:text="{md-schedule}"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="All Day Event"
        android:textColor="@color/textColorDark"/>

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/all_day_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>