...
            android:background="@color/elm"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/menu_commit"
                style="@style/AppTheme.MenuStyle"
                android:text="{md-check}"/>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/layout_new_event_title"/>
...
